# AndroidNDKGif

./: .gitignore  README.md
AndroidLibnsgif/: README.md  build.gradle  settings.gradle
AndroidLibnsgif/app/: build.gradle  proguard-rules.pro
AndroidLibnsgif/gradle/wrapper/: gradle-wrapper.properties
AndroidLibnsgif/libnsgif/: .gitignore  build.gradle
AndroidNDKGif/: settings.gradle
AndroidNDKGif/androidndkgif/: build.gradle
AndroidNDKGif/androidndkgif/src/main/cpp/: Android.mk  Application.mk  BaseGifEncoder.cpp  BaseGifEncoder.h  BitWritingBlock.cpp  BitWritingBlock.h  BitmapIterator.cpp  BitmapIterator.h  CMakeLists.txt  DataBlock.cpp  DataBlock.h  EncodingType.h  FastGifEncoder.cpp  FastGifEncoder.h  GCTGifEncoder.cpp  GCTGifEncoder.h  GifDecoder.cpp  GifDecoder.h  GifEncoder.cpp  GifEncoder.h  GifFrame.cpp  GifFrame.h  LCTGifEncoder.cpp  LCTGifEncoder.h  SimpleGCTEncoder.cpp  SimpleGCTEncoder.h  com_waynejo_androidndkgif_GifDecoder.cpp  com_waynejo_androidndkgif_GifDecoder.h  com_waynejo_androidndkgif_GifEncoder.cpp  com_waynejo_androidndkgif_GifEncoder.h
AndroidNDKGif/app/: build.gradle
AndroidNDKGif/gradle/wrapper/: gradle-wrapper.properties
AndroidNDKGif/test/: build.gradle
android-gif-drawable/: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  build.gradle  gradle.properties  settings.gradle
android-gif-drawable/android-gif-drawable/: .gitignore  Doxyfile  build.gradle  consumer-proguard-rules.pro
android-gif-drawable/sample/: README.md  build.gradle  gradle.properties  proguard-rules.pro
(+150 files in other folders)
